<?xml version="1.0"?>
<package format="2">
    <name>rviz_visualization</name>
    <version>0.0.1</version>
    <description>rviz_visualization_demo_node</description>
    <author email="luyaomin9612@163.com">todo</author>
    <maintainer email="luyaomin9612@163.com">todo</maintainer>
    <!-- The export tag contains other, unspecified, tags -->

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TBD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>std_msgs</depend>
    <depend>tf</depend>
</package>

